# mmgpy

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT_ROADMAP.md  Dockerfile  LICENSE  README.md  WHEEL_OPTIMIZATION_STRATEGY.md  blender-extension-stats.json  codecov.yml  dependency-audit.md  docker-compose.yml  fix_rpath.py  hello.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test_build.sh  versions.json
.claude/: settings.local.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: download_vtk.sh  filter_vtk.py  optimize_wheels.py  strip_blender_wheel_metadata.py  sync_versions.py  vtk_modules.py
.github/workflows/: benchmark.yml  build-and-test.yml  build-blender-extension.yml  build-wheels.yml  build-with-cmake.yml  check-dependency-versions.yml  conda-build.yml  daily-docs-test.yml  docs.yml  install-vtk.yml  pre-commit.yml  prek.yml  publish-to-pypi.yml  publish-wheels.yml  publish.yml  redeploy-docs.yml  release.yml  track-downloads.yml  update-image-baselines.yml
0.11/: search.json
0.12/: search.json
0.13/: sitemap.xml
0.8/: 404.html  index.html
0.8/api/: index.html
0.8/changelog/: index.html
0.8/search/: search_index.json
0.9/: conftest.py  index.html  objects.inv  sitemap.xml
0.9/search/: search_index.json
api/: index.html
api/io/: index.html
api/lagrangian/: index.html
api/mesh-classes/: index.html
api/metrics/: index.html
api/options/: index.html
api/results-validation/: index.html
api/sizing/: index.html
assets/: README.md  compressor_wheel.stl  cube-distance.sol  cube-ls.sol  cube.mesh  hole.mesh  hole.sol  island.mesh  lag-mot2D.mesh  lag-mot2D.sol  multi-mat-ls.sol  multi-mat.mesh  multi-mat.sol  rodin.mesh  square.mesh  square.vtk  teapot-ls.sol
bench/: data.js
benchmarks/: README.md  bench_comparison.py  bench_io.py  bench_mesh_creation.py  bench_operations.py  bench_remesh.py  bench_remesh_2d.py  bench_remesh_3d.py  bench_remesh_surface.py  bench_validation.py  conftest.py  thresholds.json
benchmarks/scripts/: compare_benchmarks.py
blender_mmgpy/: README.md  __init__.py  _register.py  blender_manifest.toml  build.sh  operators.py  panels.py  preferences.py  properties.py  sync_version.py  utils.py
changelog/: index.html
cmake/: Commons.cmake  FindPythonManual.cmake  LinearElasticity.cmake  MMG.cmake
conda/: bld.bat  build.sh  conda_build_config.yaml  recipe.yaml  variants.yaml
dev/: 404.html  index.html  objects.inv  search.json  sitemap.xml
dev/api/: index.html
dev/bench/: data.js
dev/blender-extension/: index.html
dev/changelog/: index.html
dev/examples/: index.html
dev/search/: search_index.json
docs/: blender-extension.md  changelog.md  conftest.py  index.md  migrating-from-mesh.md
docs/api/: index.md  io.md  lagrangian.md  mesh-classes.md  metrics.md  options.md  (+2 more)
examples/: index.html  mmg2d.py  progress_rich.py  progress_tqdm.py
pr-205/: 404.html  search.json  sitemap.xml
pr-219/: 404.html  index.html
pr-221/: 404.html  search.json
pr-224/: index.html
pr-225/: sitemap.xml
pr-227/: search.json
pr-230/: objects.inv
pr-231/: search.json
pr-232/: conftest.py  objects.inv  search.json
pr-233/: objects.inv  search.json
pr-234/: conftest.py  index.html  search.json
pr-235/: search.json
pr-266/: 404.html  search.json
pr-268/: index.html
pr-272/: objects.inv  search.json
pr-277/: search.json
pr-280/: search.json
pr-281/: search.json
pr-283/: search.json
pr-285/: 404.html
pr-293/: search.json
pr-320/: search.json
pr-322/: 404.html
pr-325/: conftest.py  index.html
pr-328/: index.html  search.json
pr-333/: index.html
pr-334/: 404.html  index.html
pr-336/: conftest.py  index.html
pr-337/: search.json
pr-338/: index.html
pr-342/: search.json
pr-343/: 404.html
pr-345/: 404.html
pr-346/: index.html  search.json
pr-347/: sitemap.xml
pr-349/: 404.html
pr-350/: conftest.py
pr-351/: sitemap.xml
pr-352/: sitemap.xml
pr-353/: 404.html  index.html
scripts/: analyze_benchmark_variance.py  analyze_wheel.py  calibrate_benchmarks.py  download_vtk.sh  export_blender_extension_stats.py  filter_vtk.py  generate_implicit_assets.py  generate_logo.py  optimize_wheels.py  render_featured_image.py  track_downloads.py  vtk_modules.py
search/: search_index.json
src/: CMakeLists.txt
src/bindings/: bindings.cpp  bindings.h  common.cpp  mmg2d.cpp  mmg3d.cpp  mmg_common.cpp  mmg_common.hpp  mmg_mesh.cpp  mmg_mesh.hpp  mmg_mesh_2d.cpp  mmg_mesh_2d.hpp  mmg_mesh_s.cpp  mmg_mesh_s.hpp  mmg_multisol.hpp  mmg_progress.hpp  mmgs.cpp
src/mmgpy/: __init__.py  __main__.py  _cli.py  _extensions.py  _generate.py  _io.py  _logging.py  _mesh.py  _mmgpy.cp313-win_amd64.pyd  _mmgpy.pyi  _options.py  _progress.py  _pv_plugin.py  _pyvista.py  _pyvista.pyi  _remesh.py  _reorder.py  _result.py  _sol.py  _topology.py  _transfer.py  _validation.py  lagrangian.py  mesh.py  metrics.py  progress.py  pyvista.py  remesh.py  sizing.py
src/mmgpy/interactive/: sizing_editor.py
src/mmgpy/repair/: _core.py  _elements.py  _vertices.py
src/mmgpy/ui/: __init__.py  __main__.py  app.py  parsers.py  remeshing.py  samples.py  utils.py  viewer.py
src/mmgpy/ui/components/: __init__.py
tests/: acdcBdy.o.vtk  acdcBdy_remeshed.vtk  cli_test.py  conftest.py  context_manager_test.py  corruption_test.py  deprecation_lagrangian_shims_test.py  deprecation_test.py  docs_deployment_test.py  docs_test.py  dosol_test.py  elasticity_test.py  examples_test.py  export_blender_extension_stats_test.py  geometry_test.py  gil_release_test.py  headless_subset_test.py  hessian_test.py  interactive_test.py  io_test.py  lagrangian_test.py  levelset_test.py  logging_test.py  mesh_2d_test.py  mesh_3d_test.py  mesh_surface_test.py  mesh_test.py  mesh_unified_test.py  metrics_test.py  mmg2d_test.py  mmg3d_test.py  mmg_version_test.py  mmgpy_test.py  mmgs_test.py  multi_sol_test.py  multimat_test.py  options_test.py  output_exe.sol  point_test.py  progress_test.py  (+23 more)
(+434 files in other folders)
