[build-system]
requires = [
    "scikit-build-core>=0.11.5",
    "pybind11>=3.0.0",
    # Add numpy to build requirements for headers
    "numpy>=2.0.2",
]
build-backend = "scikit_build_core.build"

[project]
name = "mmgpy"
version = "0.4.0.dev0"
description = "Python bindings for the MMG software"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "meshio>=5.3.5",
    "numpy>=2.0.2",
    "patchelf>=0.17.2.4; sys_platform == 'linux'",
    "pyvista>=0.46.4",
    "rich>=13.0.0",
    "scipy>=1.11.0",
    "typing-extensions>=4.0.0; python_version < '3.11'",
]
authors = [{ name = "Kevin Marchais", email = "kevinmarchais@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.scikit-build]
# Build configuration
build.verbose = true
cmake.version = ">=3.15"
cmake.args = ["-DCMAKE_BUILD_TYPE=Release"]
cmake.define = { BUILD_TESTING = "OFF", BUILD_SHARED_LIBS = "ON", MMGPY_SKIP_EXECUTABLES = "OFF" }

build-dir = "build"

# Wheel configuration
wheel.packages = ["src/mmgpy"]

# Source distribution
sdist.include = ["CMakeLists.txt", "src/*", "extern/*", "scripts/*"]
sdist.exclude = ["vtk*/**", "vtk*.tar.gz", "*.mesh", "*.sol", "*.vtk"]

# Scripts entry points for development installs
[project.scripts]
mmg = "mmgpy:_run_mmg"
mmg2d = "mmgpy:_run_mmg2d"
mmg2d_O3 = "mmgpy:_run_mmg2d"
mmg3d = "mmgpy:_run_mmg3d"
mmg3d_O3 = "mmgpy:_run_mmg3d"
mmgs = "mmgpy:_run_mmgs"
mmgs_O3 = "mmgpy:_run_mmgs"

[dependency-groups]
dev = [
    "imageio>=2.37.2",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-benchmark>=5.0.0",
    "ruff>=0.14.10",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "bench_*.py"]
markers = [
    "benchmark: marks tests as benchmarks (deselect with '-m \"not benchmark\"')",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # incompatible with D211 (no-blank-line-before-class)
    "D213",   # incompatible with D212 (multi-line-summary-first-line)
    "COM812", # conflicts with formatter
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",    # asserts allowed in tests
    "T201",    # print statements allowed in tests for debugging
    "SLF001",  # accessing private members allowed in tests
    "BLE001",  # broad exception catching allowed in tests
    "PLC0415", # imports inside functions are intentional for fixtures
    "RUF059",  # unused unpacked variables are intentional fixtures
    "N806",    # uppercase variable names for matrices (M, D, H) standard in math
    "PLR2004", # magic values allowed in tests
    "NPY002",  # legacy numpy random is fine for tests
    "S603",    # subprocess calls allowed in tests
    "S607",    # partial executable paths allowed in tests
    "TC003",   # pathlib import in runtime allowed for test fixtures
]
".github/scripts/**/*.py" = [
    "ALL",     # CI scripts don't need full linting
]
"src/mmgpy/metrics.py" = [
    "N806",    # uppercase variable names for matrices (M, D, H) standard in math
    "N803",    # uppercase argument names for matrices standard in math
    "PLR2004", # magic values (2, 3, 6) are dimension constants in math code
    "C901",    # complex functions acceptable for mathematical algorithms
    "E501",    # long lines acceptable in docstrings
]
"examples/**/*.py" = [
    "T201",    # print statements essential for example output
    "PLR0913", # many arguments allowed for clarity in examples
    "PLR0915", # long functions allowed for comprehensive examples
    "PERF401", # list comprehensions not required in examples (readability first)
    "PTH123",  # open() is fine for simple examples
    "PLR2004", # magic values allowed in examples
    "N806",    # uppercase variable names for matrices in examples
]
"scripts/**/*.py" = [
    "INP001",  # scripts are not a package
    "T201",    # print statements allowed in scripts
    "ANN",     # annotations not required in scripts
    "EXE001",  # shebang is fine in scripts
    "PTH",     # pathlib not required in scripts
    "F841",    # unused variables allowed in scripts
    "PLR2004", # magic values allowed in scripts
    "RET504",  # unnecessary assignment allowed in scripts
    "C901",    # complex functions allowed in scripts
    "PLR0912", # many branches allowed in scripts
    "PLR0915", # many statements allowed in scripts
    "B007",    # unused loop variables allowed in scripts
    "E501",    # long lines allowed in scripts
    "D401",    # docstring mood not enforced in scripts
    "PLC0415", # imports in functions allowed in scripts
]
"benchmarks/**/*.py" = [
    "S101",    # asserts allowed in benchmarks
    "PLR2004", # magic values allowed in benchmarks
    "INP001",  # benchmarks directory is not a package
    "NPY002",  # legacy numpy random is fine for benchmarks
    "TC002",   # third-party imports in runtime for type annotations
    "TC003",   # stdlib imports in runtime for type annotations
]
"src/mmgpy/__init__.py" = [
    "S603",   # subprocess calls with absolute paths to system tools are safe
    "S110",   # try-except-pass is acceptable for non-critical RPATH fixing
    "BLE001", # broad exception catching is acceptable for non-critical RPATH fixing
    "E402",   # imports inside functions are intentional for lazy loading
    "C901",   # complex functions are acceptable for RPATH fixing logic
    "RUF005", # list concatenation is fine here for subprocess args
    "PTH207", # glob usage is fine for file discovery
    "D417",   # self parameter doesn't need documenting for methods
    "PLR0915", # wrapper functions that patch multiple mesh classes have many statements
]
"src/mmgpy/_logging.py" = [
    "PLC0415", # imports inside functions for optional Rich dependency
]
"src/mmgpy/_progress.py" = [
    "PLC0415", # imports inside functions for optional Rich dependency
]

[tool.ty.src]
# Exclude tests, scripts, examples, and progress module from type checking
# Progress module uses union types that cause complex type inference issues
exclude = ["tests/**", "scripts/**", "examples/**", "src/mmgpy/_progress.py"]

[tool.ty.rules]
# Ignore unresolved imports for C++ extension module that isn't available at type-check time
unresolved-import = "ignore"

[tool.cibuildwheel]
build-frontend = "build[uv]"
build = "cp310-* cp311-* cp312-* cp313-*"
# Skip 32-bit builds and musllinux (VTK doesn't provide musllinux wheels)
skip = "*-win32 *-manylinux_i686 *-musllinux*"
test-command = 'python -c "import mmgpy"'
build-verbosity = 1

[[tool.cibuildwheel.overrides]]
select = "*-macosx_x86_64"
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }

[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[[tool.cibuildwheel.overrides]]
select = "*-macosx*"
environment = { "VTK_VERSION" = "9.5.2", "VTK_DIR" = "/tmp/vtk/cmake/vtk-9.5", "CMAKE_PREFIX_PATH" = "/tmp/vtk:/tmp", "CMAKE_IGNORE_PATH" = "/opt/homebrew:/opt/homebrew/lib:/opt/homebrew/include:/usr/local:/usr/local/lib:/usr/local/include" }

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
before-all = [
    'echo "AUDITWHEEL_PLAT=${AUDITWHEEL_PLAT}"',
    # Use pre-downloaded VTK from CI cache, or download if not available (local dev)
    'if [ -d "/project/vtk-cache/vtk" ]; then echo "Using cached VTK from /project/vtk-cache/vtk"; cp -r /project/vtk-cache/vtk /tmp/vtk; else echo "Downloading VTK..."; /project/.github/scripts/download_vtk.sh linux $(uname -m) /tmp && mv /tmp/vtk-cache/vtk /tmp/vtk; fi',
    # Set up symlinks expected by CMake
    'rm -rf /tmp/lib64 && ln -s /tmp/vtk/lib64 /tmp/lib64',
    'rm -rf /tmp/lib && ln -s /tmp/vtk/lib64 /tmp/lib',
    'ln -sf /tmp/vtk/bin /tmp/bin || true',
    'ln -sf /tmp/vtk/include /tmp/include || true',
    'echo "VTK ready: $(ls /tmp/vtk/lib64/libvtk*.so 2>/dev/null | wc -l) libraries"',
]
environment = { "VTK_VERSION" = "9.5.2", "VTK_DIR" = "/tmp/vtk/cmake/vtk-9.5", "CMAKE_PREFIX_PATH" = "/tmp/vtk:/tmp", "CMAKE_IGNORE_PATH" = "/usr/lib:/usr/local/lib:/opt" }
# Run auditwheel with full VTK (needs all deps), then optimize_wheels.py filters after
repair-wheel-command = "LD_LIBRARY_PATH=/tmp/vtk/lib64:$LD_LIBRARY_PATH auditwheel repair -w {dest_dir} --exclude libmmg2d.so.5 --exclude libmmg3d.so.5 --exclude libmmgs.so.5 {wheel} && python3 /project/.github/scripts/optimize_wheels.py {dest_dir}/*.whl && for whl in {dest_dir}/*.whl; do size=$(stat -c%s \"$whl\"); if [ \"$size\" -gt 104857600 ]; then echo \"ERROR: Wheel exceeds 100MB PyPI limit: $whl ($size bytes)\"; exit 1; fi; done"

[tool.cibuildwheel.macos]
archs = ["arm64"]
before-all = [
    # Use pre-downloaded VTK from CI cache, or download if not available (local dev)
    'if [ -d "./vtk-cache/vtk" ]; then echo "Using cached VTK from ./vtk-cache/vtk"; cp -r ./vtk-cache/vtk /tmp/vtk; else echo "Downloading VTK..."; ./.github/scripts/download_vtk.sh macos $(uname -m) /tmp && mv /tmp/vtk-cache/vtk /tmp/vtk; fi',
    # Set up symlinks expected by CMake
    'ln -sf /tmp/vtk/lib /tmp/lib || true',
    'ln -sf /tmp/vtk/bin /tmp/bin || true',
    'ln -sf /tmp/vtk/include /tmp/include || true',
    'echo "VTK ready: $(ls /tmp/vtk/lib/libvtk*.dylib 2>/dev/null | wc -l) libraries"',
]
environment = { "VTK_VERSION" = "9.5.2", "VTK_DIR" = "/tmp/vtk/cmake/vtk-9.5", "CMAKE_PREFIX_PATH" = "/tmp/vtk:/tmp", "CMAKE_IGNORE_PATH" = "/opt/homebrew:/opt/homebrew/lib:/opt/homebrew/include:/usr/local:/usr/local/lib:/usr/local/include", "MACOSX_DEPLOYMENT_TARGET" = "10.15" }
# Skip delocate due to VTK install_name issues; optimize wheel and copy
repair-wheel-command = "python3 $PWD/.github/scripts/optimize_wheels.py {wheel} && cp {wheel} {dest_dir}/"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
before-all = [
    "powershell -Command \"$VTK_VERSION = $env:VTK_VERSION; $RELEASE_TAG = 'VTK-' + $VTK_VERSION + '-shared'; $VTK_FILE = 'vtk-Windows-x86_64.tar.gz'; $VTK_URL = 'https://github.com/sanguinariojoe/vtk-builds/releases/download/' + $RELEASE_TAG + '/' + $VTK_FILE; Invoke-WebRequest -Uri $VTK_URL -OutFile vtk.tar.gz; New-Item -Path 'C:/vtk' -ItemType Directory -Force; tar -xzf vtk.tar.gz -C C:/vtk --strip-components=1\"",
    "powershell -Command \"New-Item -Path 'C:/lib' -ItemType Directory -Force; New-Item -Path 'C:/bin' -ItemType Directory -Force; New-Item -Path 'C:/include' -ItemType Directory -Force; Move-Item 'C:/vtk/*.lib' 'C:/lib/' -Force; Move-Item 'C:/vtk/*.dll' 'C:/bin/' -Force; Move-Item 'C:/vtk/*.exe' 'C:/bin/' -Force; Move-Item 'C:/vtk/vtk-9.5' 'C:/include/vtk-9.5' -Force\"",
]
environment = { VTK_VERSION = "9.5.2", VTK_DIR = "C:/vtk/cmake/vtk-9.5" }
repair-wheel-command = "uvx delvewheel repair -w {dest_dir} {wheel} --add-path C:/bin --ignore-in-wheel && powershell -Command \"Get-ChildItem '{dest_dir}/*.whl' | ForEach-Object { if ($_.Length -gt 104857600) { throw ('Wheel exceeds 100MB PyPI limit: ' + $_.Name + ' (' + $_.Length + ' bytes)') } }\""
